<resources>
    <string name="app_name">keeptrackLog</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u>Sign Up</u></string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Full Name</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="lastnamee">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="Have_an_account_log_in">have an account log in?<u>Log In</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>